JumpScript/tests/baselines/reference/exportAssignNonIdentifier.errors.txt
tests/cases/conformance/externalModules/foo6.jump(1,14): error TS1109: Expression expected.


==== tests/cases/conformance/externalModules/foo1.jump (0 errors) ====
    var x = 10;
    export = typeof x; // Ok
    
==== tests/cases/conformance/externalModules/foo2.jump (0 errors) ====
    export = "sausages"; // Ok
    
==== tests/cases/conformance/externalModules/foo3.jump (0 errors) ====
    export = class Foo3 {}; // Error, not an expression
    
==== tests/cases/conformance/externalModules/foo4.jump (0 errors) ====
    export = true; // Ok
    
==== tests/cases/conformance/externalModules/foo5.jump (0 errors) ====
    export = undefined; // Valid.  undefined is an identifier in JavaScript/JumpScript
    
==== tests/cases/conformance/externalModules/foo6.jump (1 errors) ====
    export = void; // Error, void operator requires an argument
                 ~
!!! error TS1109: Expression expected.
    
==== tests/cases/conformance/externalModules/foo7.jump (0 errors) ====
    export = Date || String; // Ok
    
==== tests/cases/conformance/externalModules/foo8.jump (0 errors) ====
    export = null; // Ok
    
    